--- a/app/src/main/res/layout/activity_fill_marker_info.xml
+++ b/app/src/main/res/layout/activity_fill_marker_info.xml
@@ -50,4 +50,13 @@
                 android:layout_gravity="center_horizontal" />
         </LinearLayout>
     </ScrollView>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Lat"
+        android:layout_alignTop="@+id/scrollView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="152dp" />
+
 </RelativeLayout>
